k8s-course/frontend/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend

spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 5000

  type: ClusterIP
